[tool.poetry]
name = "PraisonAI-Tools"
version = "0.0.8"
description = "Set of tools for the PraisonAI framework"
authors = ["Mervin Praison"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pydantic = "^2.8.2"
langchain = ">=0.2.14"
pytest = "^8.3.2"
lancedb = "^0.5.7"
openai = "^1.42.0"
embedchain = {extras = ["github", "youtube"], version = "^0.1.121"}
chromadb = "^0.4.22"
pyright = "^1.1.350"
pytube = "^15.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.23.1"
docx2txt = "^0.8"
crewai-tools = "^0.8.3"

[tool.poetry.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI-tools"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"